working copy of main_pseudo

--- a/settings.yaml
+++ b/settings.yaml
@@ -7,7 +7,7 @@ symbols:
   - common:
       multiplier: 1
   - BANKNIFTY:
-      underlying: 'NSE:BANKNIFTY'
+      underlying: 'NSE:NIFTY BANK'
       ce: -500
       pe: 500
       diff: 100
